--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Droid Calculator</string>
+    <string name="power">^</string>
+    <string name="_5">5</string>
 </resources>
