--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Droid Calculator</string>
     <string name="power">^</string>
     <string name="_5">5</string>
+    <string name="percent">%</string>
 </resources>
